--- a/project5/views/mainpage.ejs
+++ b/project5/views/mainpage.ejs
@@ -4,6 +4,8 @@
   
   <title>MoodCoin - Personal Stock</title>
   <link href="style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -11,7 +13,7 @@
   <%- include('nav.ejs') %>
   <%- include('logout.ejs') %>
   <div class="rest">
-  <p>This is the MAIN Stock page</p>
+  <h1>This is the MAIN Stock page</h1>
   <div class="followingDiv">
     <div> 
       <canvas id="personalStockChart5" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas> 
