--- a/project5/views/personalstock.ejs
+++ b/project5/views/personalstock.ejs
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>MoodCoin</title>
-        <link href="style.css" rel="stylesheet">
+        <link href="/style.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         
 
     </head>
@@ -15,8 +16,9 @@
         <div class="rest">
  
 
-        <p> this is the personal stock page</p>
+        <h1> Your stocks </h1>
        <div class='chartDiv'
+       
         <p>Enter your own stock data below. No APIs, just your story in numbers.</p>
 
   <label for="date">How do you feel today?</label>
