--- a/project5/public/style.css
+++ b/project5/public/style.css
@@ -1,9 +1,30 @@
+@font-face {
+    font-family: 'SubwayTicker';
+    src: url('fonts/SubwayTicker-q1Z5.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+
 body{
     margin: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    /* overflow-x: hidden;
+    overflow-y: hidden; */
     height: 100vh;
+    margin-top: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
+h1{
+    font-family: 'SubwayTicker';
+    font-size:60px;
+}
+
+html {
+    padding: 0;
+    margin: 0;
+    background-color: rgb(26, 26, 26);
+}
+
 a , div {
     text-decoration: none;
     color: white;
@@ -11,12 +32,18 @@ a , div {
 main {
     margin-left:5%;
 }
+
 .rest{
     position: relative;
     left: 5%;
     background-color: rgb(26, 26, 26);
     height: 100%;
     width: 100%;
+    margin-top: 0;
+    padding-left: 25px;
+    z-index: -10;
+
+    /* overflow: hidden; */
 }
 
 .loginf{
@@ -35,6 +62,9 @@ main {
     height: 100vh;
     width: 5%;
     background-color: rgb(70, 70, 70);
+    padding-left: 5px;
+    padding-right: 5px;
+    z-index: 10;
 
 }
 
@@ -51,25 +81,20 @@ input, button {
     margin: 0.5rem;
     font-size: 1rem;
   }
+
   canvas {
     margin-top: 2rem;
     background: #222;
     border-radius: 8px;
   }
+
   .chartDiv {
       width: 50%;
       height: 50%;
   }
 
-
-
 .followingDiv {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-}
-.rest{
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
 }
