--- a/project5/views/nav.ejs
+++ b/project5/views/nav.ejs
@@ -1,4 +1,9 @@
-<link href="style.css" rel="stylesheet">
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+
+</head>
+
 
 <div class="nav">
     <a href="/">home</a>
