--- a/project5/views/personalstock.ejs
+++ b/project5/views/personalstock.ejs
@@ -16,35 +16,54 @@
         <div class="rest">
  
 
-        <h1> Your stocks </h1>
-       <div class='chartDiv'
-       
-        <p>Enter your own stock data below. No APIs, just your story in numbers.</p>
+          <h1> Your stocks </h1>
+        <div class='personal'>
+        
+          <p>Enter your own stock data below. No APIs, just your story in numbers.</p>
 
-  <label for="date">How do you feel today?</label>
-  <input type="date" id="date" required>
-  <label for="price">Mood:</label>
-  <input type="number" id="price" step="0.01" required>
-  <button onclick="addData(); location.reload();">Add Data</button>
-  <button onclick="resetChart(); location.reload();">Reset</button>
+          <label for="date">How do you feel today?</label>
+          <input type="date" id="date" required>
+          <label for="price">Mood:</label>
+          <input type="number" id="price" step="0.01" required>
+          <button onclick="addData(); location.reload();">Add Data</button>
+          <button onclick="resetChart(); location.reload();">Reset</button>
+            <div style="display:none;">
+              <canvas id="stockChart" width="200" height="100" style="max-height: 20; max-width: 10;"></canvas>
+            </div>
+              <a href="/specificstock" id="chartLink">
+                <canvas id="personalStockChart" width="200" height="100"></canvas>
+              </a>
 
-  <canvas id="stockChart" width="200" height="100" style="max-height: 20; max-width: 10;"></canvas>
-  <div>
-    <a href="/specificstock" id="chartLink">
-      <canvas id="personalStockChart" width="200" height="100"></canvas>
-    </a>
-  </div>  
-    <canvas id="personalStockChart5" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas> 
-  
- 
-  <canvas id="personalStockChart2" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
+            </div>
+            <h1>Your investments</h1>
+            <div class="investments">
+              <div class="iCharts">
+                <h2>TITLE</h2>
+                <canvas id="personalStockChart5" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas> 
+
+              </div>
+              <div class="iCharts">
+                <h2>TITLE</h2>
+                <canvas id="personalStockChart2" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
+
+              </div>
+              <div class="iCharts">
+                <h2>TITLE</h2>
+                <canvas id="personalStockChart3" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
+
+              </div>
+              <div class="iCharts">
+                <h2>TITLE</h2>
+                <canvas id="personalStockChart4" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
+
+              </div>
+              
+            
 
 
-  <canvas id="personalStockChart3" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
-  <canvas id="personalStockChart4" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
-  
+            </div>
 
-    </div>
+        
     
     
     <script src="script.js"></script>
