--- a/project5/views/search.ejs
+++ b/project5/views/search.ejs
@@ -19,8 +19,7 @@
           <canvas id="searchStock" width="200" height="100"></canvas>
         </a>
 
-        <button id="followButton" onclick="followUser()" style="display: none;">Follow User</button>
-      
+        <button id="followButton" onclick="followUserFromSearch()" style="display: none;">Follow User</button>      
 
       </div>
 
