--- a/project5/public/style.css
+++ b/project5/public/style.css
@@ -7,12 +7,14 @@
 
 body{
     margin: 0px;
+    margin-left: 5%;
     /* overflow-x: hidden;
     overflow-y: hidden; */
     height: 100vh;
     margin-top: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 h1{
     font-family: 'SubwayTicker';
@@ -29,6 +31,8 @@ a , div {
     text-decoration: none;
     color: white;
 }
+
+ 
 main {
     margin-left:5%;
 }
@@ -42,14 +46,20 @@ main {
 }
 .rest{
     position: relative;
-    left: 5%;
     background-color: rgb(26, 26, 26);
+    left: 1%;
     height: 100%;
     width: 100%;
     margin-top: 0;
     padding-left: 25px;
+    overflow-x: hidden;
+
 
     /* overflow: hidden; */
+}
+
+#chartsContainer{
+    max-width: 50%;
 }
 .loginf{
     position: relative;
@@ -66,6 +76,8 @@ main {
     gap: 10%;
     height: 100vh;
     width: 5%;
+    left: 0%
+    ;
     background-color: rgb(70, 70, 70);
     padding-left: 5px;
     padding-right: 5px;
