--- a/project5/views/personalstock.ejs
+++ b/project5/views/personalstock.ejs
@@ -52,23 +52,23 @@
             <h1>Your investments</h1>
             <div class="investments">
               <div class="iCharts">
-                <h2>TITLE</h2>
+                <h2>Your first Investment!</h2>
 
                 <canvas id="personalStockChart5" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas> 
               
               </div>
               <div class="iCharts">
-                <h2>TITLE</h2>
+                <h2>Your second Investment!</h2>
                 <canvas id="personalStockChart2" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
 
               </div>
               <div class="iCharts">
-                <h2>TITLE</h2>
+                <h2>Your third Investment!</h2>
                 <canvas id="personalStockChart3" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
 
               </div>
               <div class="iCharts">
-                <h2>TITLE</h2>
+                <h2>Your fourth Investment!</h2>
                 <canvas id="personalStockChart4" width="400" height="200" style="max-height: 300px; max-width: 400;"></canvas>
 
               </div>
