--- a/project5/views/specificstock.ejs
+++ b/project5/views/specificstock.ejs
@@ -13,16 +13,16 @@
     <p>This is <%= username %>'s profile</p> <!-- Dynamically display the username -->
 
     <div class='chartDiv'>
-      <canvas id="specificChart" width="400" height="200"></canvas>
+      <canvas id="specificChart" ></canvas>
       <div>
         <button onclick="followUserFromSearch()">Follow User</button>
       </div>
       <h1>Follows</h1>
       <div class="followChart"> 
-        <canvas class='followCharts' id="specificChartF" width="400" height="200"></canvas>
-        <canvas class='followCharts' id="specificChartF1" width="400" height="200"></canvas>
-        <canvas class='followCharts' id="specificChartF2" width="400" height="200"></canvas>
-        <canvas class='followCharts' id="specificChartF3" width="400" height="200"></canvas>
+        <canvas class='followCharts' id="specificChartF" ></canvas>
+        <canvas class='followCharts' id="specificChartF1" ></canvas>
+        <canvas class='followCharts' id="specificChartF2" ></canvas>
+        <canvas class='followCharts' id="specificChartF3" ></canvas>
       </div>
     </div>
   </div>
