--- a/project5/views/search.ejs
+++ b/project5/views/search.ejs
@@ -11,6 +11,7 @@
     
 
     <div class='rest'>
+      <h1 style="font-size: 60px; margin-top: 20px" >Search a Mood Stock</h1>
       <input type="text" id="search">
       <button onclick="searchU();">search</button>
 
