--- a/project5/views/nav.ejs
+++ b/project5/views/nav.ejs
@@ -7,7 +7,7 @@
 
 <div class="nav">
     <a href="/">
-        <img src="uploads/<%= activeRoute === '/home' ? 'home_selected.png' : 'home_unselected.png' %>" alt="Home" style="width:30px; height:30px;">
+        <img src="uploads/<%= activeRoute === '/' ? 'home_selected.png' : 'home_unselected.png' %>" alt="Home" style="width:30px; height:30px;">
       </a>
     
       <a href="/search">
@@ -15,7 +15,7 @@
       </a>
     
       <a href="/personalstock">
-        <img src="uploads/<%= activeRoute === '/profile' ? 'profile_selected.png' : 'profile_unselected.png' %>" alt="Profile" style="width:30px; height:30px;">
+        <img src="uploads/<%= activeRoute === '/personalstock' ? 'profile_selected.png' : 'profile_unselected.png' %>" alt="Profile" style="width:30px; height:30px;">
       </a>
     
     
