--- a/project5/views/personalstock.ejs
+++ b/project5/views/personalstock.ejs
@@ -16,7 +16,7 @@
         <div class="rest">
  
 
-          <h1> Your stocks </h1>
+          <h1> Your Stock </h1>
         <div class='personal'>
         
           
