--- a/project5/public/style.css
+++ b/project5/public/style.css
@@ -53,6 +53,7 @@ main {
     margin-top: 0;
     padding-left: 25px;
     overflow-x: hidden;
+    
 
 
     /* overflow: hidden; */
@@ -60,6 +61,8 @@ main {
 
 #chartsContainer{
     max-width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 .loginf{
     position: relative;
