--- a/project5/views/search.ejs
+++ b/project5/views/search.ejs
@@ -17,7 +17,7 @@
 
       <div>
         <a  id="chartLink">
-          <canvas id="searchStock" width="200" height="100"></canvas>
+          <canvas class ="chartLink" id="searchStock" width="200" height="100"></canvas>
         </a>
 
         <button class='searchButton'id="followButton" onclick="followUserFromSearch()" style="display: none;">Follow User</button>      
